# sorga_example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile.in  mainpage.dox  page1.dox
include/write_text/: write_text.h
src/: mainapp.cpp
src/write_text/: write_text.cpp
test/: compare.cmake  test2.test  test3.testfile
